@@ -15,8 +15,10 @@ import com.tapdata.tm.commons.dag.process.TableRenameProcessNode;
 import com.tapdata.tm.commons.dag.vo.SyncObjects;
 import com.tapdata.tm.commons.dag.vo.TableRenameTableInfo;
 import com.tapdata.tm.commons.schema.*;
+import com.tapdata.tm.commons.schema.bean.ResponseBody;
 import com.tapdata.tm.commons.schema.bean.SourceDto;
 import com.tapdata.tm.commons.schema.bean.SourceTypeEnum;
+import com.tapdata.tm.commons.schema.bean.ValidateDetail;
 import com.tapdata.tm.commons.task.dto.ParentTaskDto;
 import com.tapdata.tm.commons.task.dto.TaskDto;
 import com.tapdata.tm.commons.util.CapabilityEnum;
@@ -28,6 +30,7 @@ import com.tapdata.tm.livedataplatform.dto.LiveDataPlatformDto;
 import com.tapdata.tm.livedataplatform.service.LiveDataPlatformService;
 import com.tapdata.tm.lock.annotation.Lock;
 import com.tapdata.tm.lock.constant.LockType;
+import com.tapdata.tm.message.constant.Level;
 import com.tapdata.tm.messagequeue.dto.MessageQueueDto;
 import com.tapdata.tm.messagequeue.service.MessageQueueService;
 import com.tapdata.tm.metadatadefinition.dto.MetadataDefinitionDto;
@@ -36,10 +39,13 @@ import com.tapdata.tm.metadatainstance.service.MetadataInstancesService;
 import com.tapdata.tm.task.bean.LdpFuzzySearchVo;
 import com.tapdata.tm.task.bean.MultiSearchDto;
 import com.tapdata.tm.task.constant.LdpDirEnum;
+import com.tapdata.tm.task.entity.TaskDagCheckLog;
+import com.tapdata.tm.task.entity.TaskEntity;
 import com.tapdata.tm.task.service.LdpService;
 import com.tapdata.tm.task.service.TaskSaveService;
 import com.tapdata.tm.task.service.TaskService;
 import com.tapdata.tm.user.service.UserService;
+import com.tapdata.tm.utils.MessageUtil;
 import com.tapdata.tm.utils.MongoUtils;
 import com.tapdata.tm.utils.SpringContextHelper;
 import com.tapdata.tm.utils.ThreadLocalUtils;
@@ -47,6 +53,7 @@ import com.tapdata.tm.worker.entity.Worker;
 import com.tapdata.tm.worker.service.WorkerService;
 import io.tapdata.entity.event.ddl.table.TapCreateTableEvent;
 import io.tapdata.pdk.apis.entity.Capability;
+import io.tapdata.pdk.apis.entity.TestItem;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -60,6 +67,7 @@ import org.springframework.security.config.web.servlet.OAuth2LoginDsl;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -225,22 +233,39 @@ public class LdpServiceImpl implements LdpService {
     public String generateLdpTaskType(String sourceConnId, UserDetail user) {
         Criteria criteria = Criteria.where("_id").is(MongoUtils.toObjectId(sourceConnId));
         Query conQuery = new Query(criteria);
-        conQuery.fields().include("database_type");
-        DataSourceConnectionDto connection = dataSourceService.findOne(conQuery);
+        conQuery.fields().include("database_type", "response_body");
+        DataSourceConnectionDto connection = dataSourceService.findById(MongoUtils.toObjectId(sourceConnId), "database_type", "response_body");
         dataSourceService.buildDefinitionParam(Lists.newArrayList(connection), user);
         List<Capability> capabilities = connection.getCapabilities();
         if (CollectionUtils.isEmpty(capabilities)) {
             return ParentTaskDto.TYPE_INITIAL_SYNC_CDC;
         }
-        boolean streamRead = false;
-        boolean batchRead = false;
-        for (Capability capability : capabilities) {
-            if (CapabilityEnum.STREAM_READ_FUNCTION.name().equalsIgnoreCase(capability.getId())) {
-                streamRead = true;
+
+        boolean streamRead = true;
+        boolean batchRead = true;
+        ResponseBody responseBody = connection.getResponse_body();
+        if (responseBody != null) {
+            List<ValidateDetail> validateDetails = responseBody.getValidateDetails();
+            Map<String, ValidateDetail> map = new HashMap<>();
+            if (org.apache.commons.collections.CollectionUtils.isNotEmpty(validateDetails)) {
+                // list to map
+                map = validateDetails.stream().collect(Collectors.toMap(ValidateDetail::getShowMsg, Function.identity()));
             }
-            if (CapabilityEnum.BATCH_READ_FUNCTION.name().equalsIgnoreCase(capability.getId())) {
-                batchRead = true;
+            if (!map.containsKey(TestItem.ITEM_READ_LOG) || !"passed".equals(map.get(TestItem.ITEM_READ_LOG).getStatus())) {
+                streamRead = false;
             }
+
+            if (!map.containsKey(TestItem.ITEM_READ) || !"passed".equals(map.get(TestItem.ITEM_READ).getStatus())) {
+                batchRead = false;
+            }
+
+        }
+        Set<String> capabilityIds = capabilities.stream().map(Capability::getId).collect(Collectors.toSet());
+        if (!capabilityIds.contains(CapabilityEnum.STREAM_READ_FUNCTION.name().toLowerCase())) {
+            streamRead = false;
+        }
+        if (!capabilityIds.contains(CapabilityEnum.BATCH_READ_FUNCTION.name().toLowerCase())) {
+            batchRead = false;
         }
 
         if (batchRead && streamRead) {
@@ -252,7 +277,6 @@ public class LdpServiceImpl implements LdpService {
         }
         return ParentTaskDto.TYPE_INITIAL_SYNC;
     }
-
 
     private Criteria fdmTaskCriteria(String connectionId) {
         return  Criteria.where("ldpType").is(TaskDto.LDP_TYPE_FDM)
@@ -467,12 +491,14 @@ public class LdpServiceImpl implements LdpService {
         try {
             DAG dag = task.getDag();
             if (dag != null) {
-                LinkedList<DatabaseNode> sourceNode = dag.getSourceNode();
+                List<Node> sourceNode = dag.getSourceNodes();
                 if (sourceNode != null) {
-                    DatabaseNode first = sourceNode.getFirst();
-                    String connectionId = first.getConnectionId();
-                    String type = generateLdpTaskType(connectionId, user);
-                    task.setType(type);
+                    Node node = sourceNode.get(0);
+                    if (node instanceof TableNode) {
+                        String connectionId = ((TableNode) node).getConnectionId();
+                        String type = generateLdpTaskType(connectionId, user);
+                        task.setType(type);
+                    }
                 }
             }
             taskSaveService.supplementAlarm(task, user);
@@ -628,9 +654,9 @@ public class LdpServiceImpl implements LdpService {
         if (CollectionUtils.isNotEmpty(oldQualifiedNames)) {
             Criteria criteriaOld = Criteria.where("qualified_name").in(oldQualifiedNames).and("is_deleted").ne(true);
             Query queryOldTask = new Query(criteriaOld);
-            queryOldTask.fields().include("listtags", "qualified_name");
+            queryOldTask.fields().include("listtags", "qualified_name", "source");
             oldMetaDatas = metadataInstancesService.findAllDto(queryOldTask, user);
-            oldMetaMap = oldMetaDatas.stream().collect(Collectors.toMap(m -> m.getId().toHexString(), m -> m, (k1, k2) -> k1));
+            oldMetaMap = oldMetaDatas.stream().collect(Collectors.toMap(MetadataInstancesDto::getQualifiedName, m -> m, (k1, k2) -> k1));
         }
         if (TaskDto.LDP_TYPE_FDM.equals(task.getLdpType())) {
 
@@ -638,7 +664,8 @@ public class LdpServiceImpl implements LdpService {
             Node sourceNode = sources.get(0);
             String sourceCon = ((DataParentNode) sourceNode).getConnectionId();
 
-            Criteria criteria = Criteria.where("linkId").is(sourceCon).and("item_type").is(MetadataDefinitionDto.LDP_ITEM_FDM);
+            Tag fdmTag = getfdmTag(user);
+            Criteria criteria = Criteria.where("linkId").is(sourceCon).and("item_type").is(MetadataDefinitionDto.LDP_ITEM_FDM).and("parent_id").is(fdmTag.getId());
             MetadataDefinitionDto tag = metadataDefinitionService.findOne(new Query(criteria), user);
             Tag conTag = new Tag(tag.getId().toHexString(), tag.getValue());
             List<MetadataInstancesDto> saveMetaDatas = new ArrayList<>();
@@ -652,7 +679,7 @@ public class LdpServiceImpl implements LdpService {
                 MetadataInstancesDto metadataInstancesDto = buildSourceMeta(conTag, metaData, oldMeta);
                 saveMetaDatas.add(metadataInstancesDto);
             }
-            metadataInstancesService.bulkUpsetByWhere(metaDatas, user);
+            metadataInstancesService.bulkUpsetByWhere(saveMetaDatas, user);
         } else {
 
             List<String> tagIds = oldMetaDatas.stream()
@@ -740,6 +767,13 @@ public class LdpServiceImpl implements LdpService {
 
     public Tag getMdmTag(UserDetail user) {
         Criteria mdmCriteria = Criteria.where("value").is("MDM").and("parent_id").exists(false);
+        Query query = new Query(mdmCriteria);
+        MetadataDefinitionDto mdmTag = metadataDefinitionService.findOne(query, user);
+        return new Tag(mdmTag.getId().toHexString(), mdmTag.getValue());
+    }
+
+    private Tag getfdmTag(UserDetail user) {
+        Criteria mdmCriteria = Criteria.where("value").is("FDM").and("parent_id").exists(false);
         Query query = new Query(mdmCriteria);
         MetadataDefinitionDto mdmTag = metadataDefinitionService.findOne(query, user);
         return new Tag(mdmTag.getId().toHexString(), mdmTag.getValue());
@@ -1120,7 +1154,89 @@ public class LdpServiceImpl implements LdpService {
 
         }
 
+        for (String tableName : tableNames) {
+            tableStatusMap.putIfAbsent(tableName, "noRunning");
+        }
+
         return tableStatusMap;
+    }
+
+
+    @Override
+    public Set<String> belongLdpIds(String connectionId, List<MetadataInstancesDto> metas, UserDetail user) {
+        Set<String> newTables = new HashSet<>();
+        if (CollectionUtils.isEmpty(metas)) {
+            return newTables;
+        }
+        Set<String> tableNames = metas.stream().map(MetadataInstancesDto::getOriginalName).collect(Collectors.toSet());
+        Criteria criteria = Criteria.where("ldpType").in(TaskDto.LDP_TYPE_FDM, TaskDto.LDP_TYPE_MDM)
+                .and("dag.nodes.connectionId").is(connectionId)
+                .and("is_deleted").ne(true)
+                .and("status").nin(TaskDto.STATUS_DELETING, TaskDto.STATUS_DELETE_FAILED);
+        if (CollectionUtils.isNotEmpty(tableNames)) {
+            criteria.orOperator(new Criteria().and("dag.nodes.tableName").in(tableNames),
+                    new Criteria().and("dag.nodes.syncObjects.objectNames").in(tableNames)
+            );
+        }
+
+        Query query = new Query(criteria);
+        List<TaskDto> tasks = taskService.findAllDto(query, user);
+        if (CollectionUtils.isEmpty(tasks)) {
+            return newTables;
+        }
+
+        List<TaskDto> newTasks = new ArrayList<>();
+        for (TaskDto task : tasks) {
+            DAG dag = task.getDag();
+            if (dag != null) {
+                List<Node> targets = dag.getTargets();
+                if (CollectionUtils.isNotEmpty(targets)) {
+                    for (Node target : targets) {
+                        if (target instanceof DataParentNode) {
+                            if (connectionId.equals(((DataParentNode<?>) target).getConnectionId())) {
+                                newTasks.add(task);
+                                break;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        for (TaskDto newTask : newTasks) {
+            if (CollectionUtils.isEmpty(tableNames)) {
+                break;
+            }
+            List<Node> targets = newTask.getDag().getTargets();
+            if (TaskDto.LDP_TYPE_FDM.equals(newTask.getLdpType())) {
+                Node node = targets.get(0);
+                List<SyncObjects> syncObjects = ((DatabaseNode) node).getSyncObjects();
+                List<String> ldpNewTables = newTask.getLdpNewTables();
+                if (CollectionUtils.isNotEmpty(syncObjects)) {
+                    SyncObjects syncObjects1 = syncObjects.get(0);
+
+                    List<String> objectNames = syncObjects1.getObjectNames();
+                    for (String tableName : tableNames) {
+                        if (objectNames.contains(tableName)) {
+                            newTables.add(tableName);
+                        }
+                    }
+                }
+            } else {
+                for (Node target : targets) {
+                    if (target instanceof TableNode && connectionId.equals(((TableNode) target).getConnectionId())) {
+                        String tableName = ((TableNode) target).getTableName();
+                        if (tableNames.contains(tableName)) {
+                            newTables.add(tableName);
+                        }
+                    }
+                }
+            }
+
+            tableNames.removeAll(newTables);
+        }
+
+        return newTables;
     }
 
     @Override
@@ -1174,7 +1290,6 @@ public class LdpServiceImpl implements LdpService {
         for (TaskDto taskDto : taskDtos) {
             switch (taskDto.getStatus()) {
                 case TaskDto.STATUS_COMPLETE:
-                case TaskDto.STATUS_EDIT:
                 case TaskDto.STATUS_ERROR:
                 case TaskDto.STATUS_RENEW_FAILED:
                 case TaskDto.STATUS_SCHEDULE_FAILED:
